--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>dkfz | SpatialHack</title>
+  <title>DKFZ | SpatialHack</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -113,9 +113,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./schedule.html">Schedule</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </nav>
@@ -163,8 +163,9 @@
           </p><p>The field of spatial omics is rapidly evolving, driven by advancements in technology and the need for comprehensive analysis methods. This hackathon provides a unique platform for interdisciplinary collaboration, allowing participants with diverse backgrounds such as bioinformatics, software development, and spatial biology to contribute their expertise. During the event, teams will collaborate, guided by mentors and industry professionals, to develop prototypes within a specific timeframe. At the end of the hackathon, prototypes will be evaluated by a panel of judges based on technical innovation, feasibility, and potential impact. By joining this hackathon, you can play a pivotal role in shaping the future of spatial omics analysis and drive transformative changes in the field.
             
           </p><p>Don't miss this opportunity to be part of the Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics. Register now and immerse yourself in a stimulating environment where you can push the boundaries of spatial omics analysis. Join us as we work towards developing powerful tools and methodologies that unlock the potential of spatially resolved biological data.</p>
+          <br>
 
-          <h3 id="project-focus" class="mb-3 mt-4">Project Focus</h3>
+          <h3 id="project-focus" class="mb-3 mt-4">Hackathon Focus</h3>
 
           <p>
             <p><img class="image" src="https://user-images.githubusercontent.com/114547/201365771-dae41d4d-8706-46b8-9de5-14ebd084b444.png" alt="image"></p>          </p>
@@ -198,12 +199,22 @@
                 Kim, S., & Ma, B. (2018). Overview and recent advances in solid oxide fuel cells: Development, materials, fabrication, and applications. Journal of Industrial and Engineering Chemistry, 57, 1-18.
               </li>
             </ol> -->
-          
+            <br>
 
             <h3 id="c-e" class="mb-3 mt-4">Community engagement</h3>
             <p>
-              The T-SOFC Project places great emphasis on community engagement to foster collaboration and knowledge sharing. Regular workshops, seminars, and conferences will be organized to provide a platform for researchers, industry professionals, and enthusiasts to exchange ideas and present their work. These events will feature keynote speakers, panel discussions, and interactive sessions, creating opportunities for networking and collaboration. The project also plans to establish an online community forum and open-access publication platform to facilitate ongoing discussions, dissemination of research findings, and collaboration beyond the physical events. By actively engaging the community, the T-SOFC Project aims to create a vibrant ecosystem of stakeholders working together towards a sustainable future.
+              At the Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics, we believe in the power of community engagement. We strive to foster a collaborative environment where participants can connect, network, and share knowledge.
             </p>
+            <p>
+              Throughout the hackathon, you will have the opportunity to engage with leading experts, mentors, and industry professionals in the field of spatial omics analysis. This not only allows for valuable interactions and mentorship but also opens doors to potential collaborations and future partnerships. By joining our community, you will be part of a supportive network of like-minded individuals, all working towards advancing the frontiers of spatial biology research.
+            </p>
+            <p>
+              In addition, the hackathon provides a platform to exchange ideas, insights, and best practices with fellow participants from diverse backgrounds. Through team collaboration and interdisciplinary discussions, you will gain new perspectives and broaden your understanding of spatial omics analysis. We encourage active participation and knowledge sharing, as we believe that collective intelligence drives innovation and propels the field forward.
+            </p>
+            <p>
+              Join us in building a vibrant and engaged community at the Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics. Together, let's create lasting connections, inspire one another, and shape the future of spatial omics research.
+            </p>
+            <br>
 
           <h3 id="o-d" class="mb-3 mt-4">Team</h3>
 
@@ -269,12 +280,19 @@
             </div>
 
           </div>
-
+          <br>
+          <br>
             <h3 id="c-o-d" class="mb-3 mt-4">Code of Conduct</h3>
 
             <p>
-              The T-SOFC Project adheres to a code of conduct to ensure a respectful, inclusive, and safe environment for all participants. This code of conduct prohibits any form of harassment, discrimination, or disrespectful behavior based on race, gender, religion, sexual orientation, or any other protected characteristic. Participants are expected to treat each other with professionalism, courtesy, and respect, fostering a collaborative and supportive atmosphere. Any violations of the code of conduct should be reported to the project organizers, who will take appropriate action to address the situation and ensure the well-being of all participants.
-              In conclusion, the T-SOFC Project endeavors to advance the field of tubular solid oxide fuel cells through research, collaboration, and community engagement. By bringing together experts from various backgrounds and promoting knowledge sharing, this project aims to contribute to the development of sustainable energy solutions for a greener future.</p>
+              The Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics upholds a strict Code of Conduct. We are committed to fostering a respectful and inclusive environment for all participants.
+            </p>
+            <p>
+              Respect and inclusivity are paramount. Treat everyone with respect, embrace diversity, and create an atmosphere where all contributions are valued. Collaboration, professionalism, and ethical conduct are expected from all participants.
+            </p>
+            <p>
+              We maintain a zero-tolerance policy for harassment or discrimination. If you witness or experience any violations, promptly report them to the organizers. Together, let's ensure a safe and inclusive experience for everyone involved.
+            </p>
 
         </div>
       </article>
@@ -293,7 +311,7 @@
         <div class="col-md-4">
           <h5>Contact</h5>
           <ul class="list-unstyled">
-            <li>Email: info@example.com</li>
+            <li>Email: spatialomic@gmail.com</li>
             <li>Phone: +1 123-456-7890</li>
           </ul>
         </div>
