--- a/schedule.html
+++ b/schedule.html
@@ -47,7 +47,7 @@
         <h1 class="mt-4 mb-3">Hackathon Schedule</h1>
         <br>
         <br>
-        <h3 class="mb-3">Day 1</h3> <h4>Wednesday, July 19th, 2023</h4> <hr>
+        <h3 class="mb-3">Day 1</h3> <h4>Wednesday, July 19th, 2023</h4><hr> <h5>Brainstorming</h5> <br>
         <ul class="list-group mb-4">
           <li class="list-group-item">10:00-12:00: Talks on ... </li>
           <li class="list-group-item">12:00-13:30: Break</li>
@@ -56,8 +56,8 @@
           <li class="list-group-item">18:50-20:00: Icebreaker activity and team building session</li>
           <li class="list-group-item">20:00-24:00: Evening at free disposal</li>
         </ul>
-    
-        <h3 class="mb-3">Day 2</h3> <h4>Thursday, July 20th, 2023</h4> <hr>
+        <br>
+        <h3 class="mb-3">Day 2</h3> <h4>Thursday, July 20th, 2023</h4> <hr><h5>Hacking</h5>  <br>
         <ul class="list-group mb-4">
           <li class="list-group-item">9:00-10:00: Talks on ... </li>
           <li class="list-group-item">10:00-11:00: Talks on ... </li>
@@ -67,8 +67,8 @@
           </li>
           <li class="list-group-item">20:00-24:00: Evening at free disposal</li>
         </ul>
-    
-        <h3 class="mb-3">Day 3</h3> <h4>Friday, July 21th, 2023</h4> <hr>
+        <br>
+        <h3 class="mb-3">Day 3</h3> <h4>Friday, July 21th, 2023</h4> <hr><h5>Hacking</h5> <br>
         <ul class="list-group mb-4">
           <li class="list-group-item">10:00-12:00: Talks on ... </li>
           <li class="list-group-item">12:00-13:30: Break</li>
@@ -86,9 +86,9 @@
       <div class="row">
         <div class="col-md-8">
           <h5>About</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla, felis vel consectetur
-            consectetur, enim leo tincidunt nisl, vel pharetra purus nisi vel leo. Nulla gravida dui auctor ligula
-            finibus, at facilisis elit consequat.</p>
+          <p>We are a dedicated team of Ph.D. and Master's students from DKFZ Heidelberg, organizing the Spverse hackathon under the expert guidance of Prof. Oliver Stegle and Prof. Moritz Gerstung. Our aim is to bring together passionate individuals and foster innovation in the field of spatial omics analysis.
+            If you are interested in joining us or have any inquiries, please don't hesitate to contact us via email. We look forward to hearing from you and collaborating to push the boundaries of spatial omics research.
+            </p>
         </div>
         <div class="col-md-4">
           <h5>Contact</h5>
