--- a/schedule.html
+++ b/schedule.html
@@ -72,7 +72,7 @@
         <ul class="list-group mb-4">
           <li class="list-group-item">10:00-12:00: Talks on ... </li>
           <li class="list-group-item">12:00-13:30: Break</li>
-          <li class="list-group-item">13:30-14:30: <b>Dr. Oliver Stegle: </b>General introduction to ...
+          <li class="list-group-item">13:30-14:30: <b>Dr. Moritz Gerstung: </b>General introduction to ...
           </li>
           <li class="list-group-item">20:00-24:00: Evening at free disposal</li>
         </ul>
