--- a/index.html
+++ b/index.html
@@ -182,14 +182,11 @@
                 </p>
               </li>
               <li>
-                <p>Prototyping a workflow for a external hackathon in October,<br> * A prototype workflow is implemented by Elyas Heidari.
-                </p>
-                <li><p>Create a landmark spatial dataset (8 Xenium slides + 10 Visium slides + 10 scRNAseq + potentially multiom) -> establishment of spatialdata objects</li>
-                <li>Standardization of QC using TXSIM and Segmentation, Normalization and pp</li> 
-                <li>Cell annotation, Niche detection,  Cellular interaction, Graph modeling,
-                  Bayesian modelling of spatial patterns and Clonal analysis</li>
-                <li>Integration of spatialtx, single-cell omics, and h&e images
-                  Integrated, user-friendly, and reproducible end-to-end workflow</li>
+                <p>Prototyping a workflow for a external hackathon in October,<br> * A prototype workflow is implemented by Elyas Heidari.</p>
+                <li><p>Create a landmark spatial dataset (8 Xenium slides + 10 Visium slides + 10 scRNAseq + potentially multiom) -> establishment of spatialdata objects</p></li>
+                <li><p>Standardization of QC using TXSIM and Segmentation, Normalization and pp</p></li> 
+                <li><p>Cell annotation, Niche detection,  Cellular interaction, Graph modeling, Bayesian modelling of spatial patterns and Clonal analysis</p></li>
+                <li><p>Integration of spatialtx, single-cell omics, and h&e images Integrated, user-friendly, and reproducible end-to-end workflow</p></li>
                   </ul>
 
             <!-- <h4>References</h4>
