section Section created

--- a/index.html
+++ b/index.html
@@ -169,25 +169,24 @@
 
           <p>
             <p><img class="image" src="https://user-images.githubusercontent.com/114547/201365771-dae41d4d-8706-46b8-9de5-14ebd084b444.png" alt="image"></p>          </p>
-            The main targets of the Spverse are:
+            <hr>
+            The main targets of the <b>Spverse</b> are:
             <br>
             <br>
             <ul>
-              <li>
-                <p>Reproducible and integrated workflow for incoming DKFZ's spatial datasets</p>
-                <!-- <p><b>Data</b>. Identification and collation of <b>datasets for benchmarking</b>. Some key datasets will be collated and ready to use for the start of the hackathon, but we hope to expand this to include other relevant technologies and biological systems, especially with a focus on evaluating the quality of cell segmentation.</p> -->
-              </li>
-              <li>
-                <p>Finding gaps and brainstorming on solving them
-                </p>
-              </li>
-              <li>
-                <p>Prototyping a workflow for a external hackathon in October,<br> * A prototype workflow is implemented by Elyas Heidari.</p>
-                <li><p>Create a landmark spatial dataset (8 Xenium slides + 10 Visium slides + 10 scRNAseq + potentially multiom) -> establishment of spatialdata objects</p></li>
-                <li><p>Standardization of QC using TXSIM and Segmentation, Normalization and pp</p></li> 
-                <li><p>Cell annotation, Niche detection,  Cellular interaction, Graph modeling, Bayesian modelling of spatial patterns and Clonal analysis</p></li>
-                <li><p>Integration of spatialtx, single-cell omics, and h&e images Integrated, user-friendly, and reproducible end-to-end workflow</p></li>
-                  </ul>
+              <li><p>Reproducible and integrated workflow for incoming DKFZ's spatial datasets</p></li>
+              <li><p>Finding gaps and brainstorming on solving them</p></li>
+              <li><p>Prototyping a workflow for a external hackathon in October,<br> * A prototype workflow is implemented by Elyas Heidari.</p>
+            </ul>
+            <hr>
+            <p>The main targets of the <b>Spverse</b> are:</p>
+              <li>Create a landmark spatial dataset (8 Xenium slides + 10 Visium slides + 10 scRNAseq + potentially multiom) -> establishment of spatialdata objects</p></li>
+              <li>Standardization of QC using TXSIM and Segmentation, Normalization and preprocessing</p></li> 
+              <li>Cell annotation, Niche detection,  Cellular interaction, Graph modeling
+              <li>Bayesian modelling of spatial patterns and Clonal analysis</p></li>
+              <li>Integration of spatialtx, single-cell omics, and h&e images</li>
+              <li>Design an integrated, user-friendly, and reproducible end-to-end workflow</p></li>
+            </ul>
 
             <!-- <h4>References</h4>
             <ol>
@@ -205,13 +204,13 @@
               At the Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics, we believe in the power of community engagement. We strive to foster a collaborative environment where participants can connect, network, and share knowledge.
             </p>
             <p>
-              Throughout the hackathon, you will have the opportunity to engage with leading experts, mentors, and industry professionals in the field of spatial omics analysis. This not only allows for valuable interactions and mentorship but also opens doors to potential collaborations and future partnerships. By joining our community, you will be part of a supportive network of like-minded individuals, all working towards advancing the frontiers of spatial biology research.
+              Throughout the hackathon, you will have the opportunity to engage with experts and mentors in the field of spatial omics analysis.
             </p>
             <p>
               In addition, the hackathon provides a platform to exchange ideas, insights, and best practices with fellow participants from diverse backgrounds. Through team collaboration and interdisciplinary discussions, you will gain new perspectives and broaden your understanding of spatial omics analysis. We encourage active participation and knowledge sharing, as we believe that collective intelligence drives innovation and propels the field forward.
             </p>
             <p>
-              Join us in building a vibrant and engaged community at the Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics. Together, let's create lasting connections, inspire one another, and shape the future of spatial omics research.
+              Join us in Sharing our knowledge at the <b>Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics. </b>let's create lasting connections, inspire one another, and shape the future of spatial omics research.
             </p>
             <br>
 
@@ -302,18 +301,6 @@
           </div>
           <br>
           <br>
-            <h3 id="c-o-d" class="mb-3 mt-4">Code of Conduct</h3>
-
-            <p>
-              The Hackathon for Prototyping In-house Analysis Workflows for Spatial Omics upholds a strict Code of Conduct. We are committed to fostering a respectful and inclusive environment for all participants.
-            </p>
-            <p>
-              Respect and inclusivity are paramount. Treat everyone with respect, embrace diversity, and create an atmosphere where all contributions are valued. Collaboration, professionalism, and ethical conduct are expected from all participants.
-            </p>
-            <p>
-              We maintain a zero-tolerance policy for harassment or discrimination. If you witness or experience any violations, promptly report them to the organizers. Together, let's ensure a safe and inclusive experience for everyone involved.
-            </p>
-
         </div>
       </article>
     </div>
