--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <div class="organizer__card card-body">
                 <img class="organizer__image" src="./pics/oli.jpeg" alt="Name">
                 
-                <h5 class="card-title">prof. Oliver Stegle</h5>
+                <h5 class="card-title">Prof. Oliver Stegle</h5>
                 <p class="card-text">Supervisor</p>
 
                 <div class="organizer__socials">
@@ -242,7 +242,7 @@
               <div class="organizer__card card-body">
                 <img class="organizer__image" src="./pics/moritz.jpeg" alt="Name">
                 
-                <h5 class="card-title">prof. Moritz Gerstung</h5>
+                <h5 class="card-title">Prof. Moritz Gerstung</h5>
                 <p class="card-text">Supervisor</p>
 
                 <div class="organizer__socials">
