--- a/schedule.html
+++ b/schedule.html
@@ -53,15 +53,15 @@
           <li class="list-group-item"><b>13:30-14:00:</b>  Openning Talk: <b>Elyas Heidari</b></li>
           <li class="list-group-item"><b>14:00-15:00:</b>  Openning Talk: <b>Dr. Oliver Stegle and Dr. Moritz Gerstung</b>
           </li>
-          <li class="list-group-item"><b>TBD:  </b>  Luca Marconato</li>
-          <li class="list-group-item"><b>TBD:  </b>  Florian Wuennemann</li>
+          <li class="list-group-item"><b>TBD:  </b> <b> Luca Marconato, </b> Status Quo of SpatialData framework for standadization of spatial data types and analysis</li>
+          <li class="list-group-item"><b>TBD:  </b>  <b>Florian Wuennemann,</b> Status Quo of MCMICRO for preprocessing, quality control, and workflow automation</li>
           <li class="list-group-item"><b>TBD:  </b>  Break </li>
-          <li class="list-group-item"><b>TBD:  </b>  Louis Kuemmerle</li>
-          <li class="list-group-item"><b>TBD:  </b>  J</li>
-          <li class="list-group-item"><b>TBD:  </b>  Vitalii Kleshchevnikov</li>
-          <li class="list-group-item"><b>TBD:  </b>  Artem Shmatko</li>
+          <li class="list-group-item"><b>TBD:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
+          <li class="list-group-item"><b>TBD:  </b>  <b>Jeongbin Park, </b> Status Quo of SAAM for segmentation-free spatial annotation</li>
+          <li class="list-group-item"><b>TBD:  </b>  <b>Vitalii Kleshchevnikov, </b> Cell-cell communication</li>
+          <li class="list-group-item"><b>TBD:  </b>  <b>Artem Shmatko, </b>  Diffusion models for digital histopathology and ideas towards integration of histopathology and transcriptomics</li>
           <li class="list-group-item"><b>TBD:  </b>  Break </li>
-          <li class="list-group-item"><b>18:30 - 20:00</b>  Conclusion, Ice Breaking and Team building</li>
+          <li class="list-group-item"><b>18:30 - 20:00</b>  Conclusion, Ice Breaking, Brain Storming and Team building</li>
         </ul>
         <br>
         <h3 class="mb-3">Day 2</h3> <h4>Thursday, July 20th, 2023</h4> <hr><h5>Hacking</h5>  <br>
@@ -81,7 +81,7 @@
           <li class="list-group-item"><b>13:30-16:30:</b>  Hacking </li>
           <li class="list-group-item"><b>16:30-17:00:</b><b>  Break </b></li>
           <li class="list-group-item"><b>17:00-19:30:</b>  Final Presentations </li>
-          <li class="list-group-item"><b>19:30-20:00:</b>  Ending talk: <b>  Elyas Heidari</b> </li>
+          <li class="list-group-item"><b>19:30-20:00:</b>  Closing talk: <b>  Elyas Heidari</b> </li>
           <li class="list-group-item"><b>20:00-20:30:</b> <b>Beer and Pizza</b></li>
         </ul>
         
