--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
               <div>
                 <img src="https://api.iconify.design/ic:baseline-location-on.svg">
-                <a href="https://www.dkfz.de/en/index.html" target="_blank" class="text-decoration-none">DKFZ - Heidelberg</a>
+                <a href="https://goo.gl/maps/xgJkf3Fbh9yA1owi9" target="_blank" class="text-decoration-none">AIH - Mathematikon</a>
               </div>
             </div>
 
