--- a/schedule.html
+++ b/schedule.html
@@ -51,19 +51,19 @@
         <br>
         <h3 class="mb-3">Day 1</h3> <h4>Wednesday, July 19th, 2023</h4><hr> <h5>Brainstorming</h5> <br>
         <ul class="list-group mb-4">
-          <li class="list-group-item"><b>13:00-13:30:</b><b>  Reception</b></li>
-          <li class="list-group-item"><b>13:30-14:00:</b>  Openning Talk: <b>Elyas Heidari</b></li>
-          <li class="list-group-item"><b>14:00-15:00:</b>  Openning Talk: <b>Dr. Oliver Stegle and Dr. Moritz Gerstung</b>
+          <li class="list-group-item"><b>13:00 - 13:30:</b><b>  Reception</b></li>
+          <li class="list-group-item"><b>13:30 - 14:00:</b>  Openning Talk: <b>Elyas Heidari</b></li>
+          <li class="list-group-item"><b>14:00 - 14:45:</b>  Openning Talk: <b>Dr. Oliver Stegle</b> and <b>Dr. Moritz Gerstung</b>
           </li>
-          <li class="list-group-item"><b>TBD:  </b> <b> Luca Marconato, </b> Status Quo of SpatialData framework for standadization of spatial data types and analysis</li>
-          <li class="list-group-item"><b>TBD:  </b>  <b>Florian Wuennemann,</b> Status Quo of MCMICRO for preprocessing, quality control, and workflow automation</li>
-          <li class="list-group-item"><b>TBD:  </b>  Break </li>
-          <li class="list-group-item"><b>TBD:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
-          <li class="list-group-item"><b>TBD:  </b>  <b>Jeongbin Park, </b> Status Quo of SAAM for segmentation-free spatial annotation</li>
-          <li class="list-group-item"><b>TBD:  </b>  <b>Vitalii Kleshchevnikov, </b> Cell-cell communication</li>
-          <li class="list-group-item"><b>TBD:  </b>  <b>Artem Shmatko, </b>  Diffusion models for digital histopathology and ideas towards integration of histopathology and transcriptomics</li>
-          <li class="list-group-item"><b>TBD:  </b>  Break </li>
-          <li class="list-group-item"><b>18:30 - 20:00</b>  Conclusion, Ice Breaking, Brain Storming and Team building</li>
+          <li class="list-group-item"><b>15:00 - 15:30:  </b> <b> Luca Marconato, </b> Status Quo of SpatialData framework for standadization of spatial data types and analysis</li>
+          <li class="list-group-item"><b>15:30 - 16:00:  </b>  <b>Florian Wuennemann,</b> Status Quo of MCMICRO for preprocessing, quality control, and workflow automation</li>
+          <li class="list-group-item"><b>16:00 - 16:30:  </b>  Break </li>
+          <li class="list-group-item"><b>16:30 - 17:00:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
+          <li class="list-group-item"><b>17:00 - 17:30:  </b>  <b>Jeongbin Park, </b> Status Quo of SAAM for segmentation-free spatial annotation</li>
+          <li class="list-group-item"><b>17:30 - 18:00:  </b>  <b>Vitalii Kleshchevnikov, </b> Cell-cell communication</li>
+          <li class="list-group-item"><b>18:00 - 18:30:  </b>  <b>Artem Shmatko, </b>  Diffusion models for digital histopathology and ideas towards integration of histopathology and transcriptomics</li>
+          <li class="list-group-item"><b>18:30 - 19:00:  </b>  Break </li>
+          <li class="list-group-item"><b>19:00 - 20:00:  </b>  Conclusion, Ice Breaking, Brain Storming and Team building</li>
         </ul>
         <br>
         <h3 class="mb-3">Day 2</h3> <h4>Thursday, July 20th, 2023</h4> <hr><h5>Hacking</h5>  <br>
@@ -91,7 +91,7 @@
     </div>
   </main>
 
-  <footer class="bg-light pt-5 pb-5 mt-5" >
+  <footer class="bg-light pt-5 pb-5 mt-5" style="background-color: #cbe1db;">
     <div class="container" style="max-width: 800px; margin: 0 auto;">
       <div class="row">
         <div class="col-md-8">
