--- a/schedule.html
+++ b/schedule.html
@@ -51,14 +51,14 @@
         <br>
         <h3 class="mb-3">Day 1</h3> <h4>Wednesday, July 19th, 2023</h4><hr> <h5>Brainstorming</h5> <br>
         <ul class="list-group mb-4">
-          <li class="list-group-item"><b>13:00 - 13:30:</b><b>  Reception</b></li>
-          <li class="list-group-item"><b>13:30 - 14:00:</b>  Openning Talk: <b>Elyas Heidari</b></li>
+          <li class="list-group-item"><b>13:30 - 13:45:</b><b>  Reception</b></li>
+          <li class="list-group-item"><b>13:45 - 14:00:</b>  Openning Talk: <b>Elyas Heidari</b></li>
           <li class="list-group-item"><b>14:00 - 14:45:</b>  Openning Talk: <b>Dr. Oliver Stegle</b> and <b>Dr. Moritz Gerstung</b>
           </li>
           <li class="list-group-item"><b>15:00 - 15:30:  </b> <b> Luca Marconato, </b> Status Quo of SpatialData framework for standadization of spatial data types and analysis</li>
-          <li class="list-group-item"><b>15:30 - 16:00:  </b>  <b>Jeongbin Park, </b> Status Quo of SAAM for segmentation-free spatial annotation</li>
+          <li class="list-group-item"><b>15:30 - 16:00:  </b>  <b>Jeongbin Park, </b> Status Quo of SSAM for segmentation-free spatial annotation</li>
           <li class="list-group-item"><b>16:00 - 16:30:  </b>  Break </li>
-          <li class="list-group-item"><b>16:30 - 17:00:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
+          <li class="list-group-item"><b>16:15 - 17:00:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
           <li class="list-group-item"><b>17:00 - 17:30:  </b>  <b>Florian Wuennemann,</b> Status Quo of MCMICRO for preprocessing, quality control, and workflow automation</li>
           <li class="list-group-item"><b>17:30 - 18:00:  </b>  <b>Vitalii Kleshchevnikov, </b> Cell-cell communication</li>
           <li class="list-group-item"><b>18:00 - 18:30:  </b>  <b>Artem Shmatko, </b>  Diffusion models for digital histopathology and ideas towards integration of histopathology and transcriptomics</li>
@@ -82,9 +82,9 @@
           <li class="list-group-item"><b>12:00-13:30:</b>  <b>Lunch</b></li>
           <li class="list-group-item"><b>13:30-16:30:</b>  Hacking </li>
           <li class="list-group-item"><b>16:30-17:00:</b><b>  Break </b></li>
-          <li class="list-group-item"><b>17:00-19:30:</b>  Final Presentations </li>
-          <li class="list-group-item"><b>19:30-20:00:</b>  Closing talk: <b>  Elyas Heidari</b> </li>
-          <li class="list-group-item"><b>20:00-20:30:</b> <b>Beer and Pizza</b></li>
+          <li class="list-group-item"><b>17:00-18:00:</b>  Final Presentations </li>
+          <li class="list-group-item"><b>18:00-18:15:</b>  Closing talk: <b>  Elyas Heidari</b> </li>
+          <li class="list-group-item"><b>18:15-19:00:</b> <b>Beer and Pizza</b></li>
         </ul>
         
       </div>
