--- a/schedule.html
+++ b/schedule.html
@@ -73,7 +73,8 @@
           <li class="list-group-item"><b>13:30-16:30:</b>  Hacking </li>
           <li class="list-group-item"><b>16:30-17:00:</b><b>  Break </b></li>
           <li class="list-group-item"><b>17:00-19:30:</b>  Hacking </li>
-          <li class="list-group-item"><b>20:00-24:00:</b> <b>Evening at free disposal</b></li>
+          <li class="list-group-item"><b>20:00-22:00:</b> <b>Hang out and Have dinner at Restaurant <a class='nav-link' href="https://goo.gl/maps/JGWnPJtpUBHBa4eQA">Urban Kitchen</a></b></li>
+          <li class="list-group-item"><b>22:00-24:00:</b> <b>Exciting Evening at free disposal</b></li>
         </ul>
         <br>
         <h3 class="mb-3">Day 3</h3> <h4>Friday, July 21th, 2023</h4> <hr><h5>Hacking</h5> <br>
