--- a/schedule.html
+++ b/schedule.html
@@ -57,13 +57,13 @@
           </li>
           <li class="list-group-item"><b>15:00 - 15:30:  </b> <b> Luca Marconato, </b> Status Quo of SpatialData framework for standadization of spatial data types and analysis</li>
           <li class="list-group-item"><b>15:30 - 16:00:  </b>  <b>Jeongbin Park, </b> Status Quo of SSAM for segmentation-free spatial annotation</li>
-          <li class="list-group-item"><b>16:00 - 16:30:  </b>  Break </li>
+          <li class="list-group-item"><b>16:00 - 16:15:  </b>  Break </li>
           <li class="list-group-item"><b>16:15 - 17:00:  </b>  <b>Louis Kuemmerle, </b>  Status Quo of TXsim, best practices of QC and panel design</li>
           <li class="list-group-item"><b>17:00 - 17:30:  </b>  <b>Florian Wuennemann,</b> Status Quo of MCMICRO for preprocessing, quality control, and workflow automation</li>
           <li class="list-group-item"><b>17:30 - 18:00:  </b>  <b>Vitalii Kleshchevnikov, </b> Cell-cell communication</li>
           <li class="list-group-item"><b>18:00 - 18:30:  </b>  <b>Artem Shmatko, </b>  Diffusion models for digital histopathology and ideas towards integration of histopathology and transcriptomics</li>
-          <li class="list-group-item"><b>18:30 - 19:00:  </b>  Break </li>
-          <li class="list-group-item"><b>19:00 - 20:00:  </b>  Conclusion, Ice Breaking, Brain Storming and Team building</li>
+          <li class="list-group-item"><b>18:30 - 18:45:  </b>  Break </li>
+          <li class="list-group-item"><b>18:45 - 19:30:  </b>  Conclusion, Brain Storming and Team building >> <b>Session Leaders</b></li>
         </ul>
         <br>
         <h3 class="mb-3">Day 2</h3> <h4>Thursday, July 20th, 2023</h4> <hr><h5>Hacking</h5>  <br>
@@ -73,8 +73,11 @@
           <li class="list-group-item"><b>13:30-16:30:</b>  Hacking </li>
           <li class="list-group-item"><b>16:30-17:00:</b><b>  Break </b></li>
           <li class="list-group-item"><b>17:00-19:30:</b>  Hacking </li>
-          <li class="list-group-item"><b>20:00-22:00:</b> <b>Hang out and Have dinner at Restaurant <a class='nav-link' href="https://goo.gl/maps/JGWnPJtpUBHBa4eQA">Urban Kitchen</a></b></li>
-          <li class="list-group-item"><b>22:00-24:00:</b> <b>Exciting Evening at free disposal</b></li>
+          <li class="list-group-item"><b>20:00-22:00:</b> <b>Dinner</b> at <nobr> <td><a class='nav-link' href="https://goo.gl/maps/JGWnPJtpUBHBa4eQA">Urban Kitchen Heidelberg </a></nobr></td></li>
+          <li class="list-group-item"><b>22:00-TBD:</b> <b>Spatial (!) tour to Heidelberg old town 
+
+
+          </b></li>
         </ul>
         <br>
         <h3 class="mb-3">Day 3</h3> <h4>Friday, July 21th, 2023</h4> <hr><h5>Hacking</h5> <br>
